Bugfix T43851: Creating a new action after stashing crashes blender